Summary of important user-visible changes for the miscellaneous package
------------------------------------------------------------------------
===============================================================================
miscellaneous-1.2.1   Release Date: 2014-06-05  Release Manager: Carnë Draug
===============================================================================

 ** The following functions have been deprecated in previous releases
    of the miscellaneous package and have now been removed:

      apply       map         partarray   temp_name

 ** units is now able to perform non-linear unit conversions such as conversion
    between Fahrenheit and Celsius.

 ** The function `asci' has been renamed `ascii'.

===============================================================================
miscellaneous-1.2.0   Release Date: 2012-10-16  Release Manager: Carnë Draug
===============================================================================
 ** New functions:
   truncate: truncates a number to a given precision.
   textable: create LaTeX tables from matrix

 ** The following functions have been imported from the combinatorics
    package which has been removed:

      partcnt     partint

 ** The function `physical_constant' has been imported from the
    physicalconstants package.

 ** The values returned by `physical_constant' have been adjusted to the
    latest (2010) recommended values by CODATA.

 ** The function `physical_constant' has a new API and should also
    perform faster.

 ** Package is now dependent on the general (>= 1.3.1)

===============================================================================
miscellaneous-1.1.0   Release Date: 2012-03-24  Release Manager: Carnë Draug
===============================================================================

 ** IMPORTANT NOTE:
    * the function `waitbar' has been renamed `text_waitbar'. Octave core has