@@ -20,7 +20,6 @@ miscellaneous
  partint
  peano_curve
  physical_constant
- publish
  read_options
  reduce
  rolldices
